--- a/resolucion.tex
+++ b/resolucion.tex
@@ -48,6 +48,9 @@
 \input{modulos/modulo_conjJugs}
 
 \pagebreak
+\input{modulos/modulo_conjOrd}
+
+\pagebreak
 \input{modulos/modulo_diccString}
 
 \pagebreak
