--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -214,7 +214,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 			\tupItem{contadorCaptura}{nat}
 			\tupItem{jugEsperandoCaptura}{dicPrior}
 			%TODO dicPrior debería ser una cola
-			\tupItem{jugsEnPos}{conjJugs}
+			\tupItem{jugsEnPos}{conjOrd(jugador)}
 		\end{Tupla}
 
 	\end{Estructura}
@@ -558,7 +558,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 		j.grillaPos[Latitud(c)][Longitud(c)].pokemon $\leftarrow$ pk\OdeLinea{|pk|}
 		j.grillaPos[Latitud(c)][Longitud(c)].contadorCaptura $\leftarrow$ 0\OdeLinea{1}
 		\tcc{Se desestima la complejidad de borrar el diccionario de prioridad anterior}
-		j.grillaPos[Latitud(c)][Longitud(c)].jugEsperandoCaptura $\leftarrow$ Vacio()\OdeLinea{1}
+		j.grillaPos[Latitud(c)][Longitud(c)].jugEsperandoCaptura $\leftarrow$ Vacia()\OdeLinea{1}
 
 		conj(coor) : coorEnRango $\leftarrow$ PosicionesEnRango(j, c, 2)\OdeLinea{1}
 		itBi(coor) : itCoor $\leftarrow$ CrearIt(coorEnRango)\OdeLinea{1}
@@ -568,7 +568,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 			itConjJugs : it $\leftarrow$ CrearIterador(j.grillaPos[Latitud(d)][Longitud(d)].jugsEnPos)\OdeLinea{1}
 			\While(\OdeBloque{EC \times log(EC)}){HayMas(it)}{
 				jugador: jug $\leftarrow$ Actual(it)\OdeLinea{1}
-				Definir(j.grillaPos[Latitud(c)][Longitud(c)].jugEsperandoCaptura, jug, (*j.jugadores[jug]).cantPokemons)\OdeLinea{log(EC)}
+				Encolar(j.grillaPos[Latitud(c)][Longitud(c)].jugEsperandoCaptura, jug, (*j.jugadores[jug]).cantPokemons)\OdeLinea{log(EC)}
 				Avanzar(it)\OdeLinea{1}
 			}
 			Avanzar(itCoor)\OdeLinea{1}
@@ -662,7 +662,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 				infoPos: posPk $\leftarrow$ j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)]\OdeLinea{1}
 				\eIf{posPk.contadorCaptura = 10}{
 					pokemon: pk $\leftarrow$ posPk.pokemon\OdeLinea{1}
-					jugador: captor $\leftarrow$ Menor(posPk.jugEsperandoCaptura)\OdeLinea{1}
+					jugador: captor $\leftarrow$ Proximo(posPk.jugEsperandoCaptura)\OdeLinea{1}
 					(*j.jugadores[captor]).cantPokemons $\leftarrow$ (*j.jugadores[captor]).cantPokemons + 1\OdeLinea{1}
 					\eIf(\OdeBloque{log(|P|)}){Definido((*j.jugadores[captor]).pokemonsCapturados, pk)}{
 						nat: nuevaCant $\leftarrow$ Obtener((*j.jugadores[captor]).pokemonsCapturados, pk) + 1\OdeLinea{log(|P|)}
