--- a/resolucion.tex
+++ b/resolucion.tex
@@ -54,7 +54,7 @@
 \input{modulos/modulo_diccString}
 
 \pagebreak
-\input{modulos/modulo_dicPrior}
+\input{modulos/modulo_colaPrior}
 
 \pagebreak
 \input{modulos/modulo_newDiccPrior}
