--- a/modulos/modulo_colaPrior.tex
+++ b/modulos/modulo_colaPrior.tex
@@ -1,15 +1,10 @@
 \section{Modulo ColaPrioridad}
 
+Se usa $\#C$ para hablar de la cantidad de elementos de la cola
+
 \begin{Interfaz}
 
-	\textbf{parámetros formales}\hangindent=2\parindent\\
-	\parbox{1.7cm}{\textbf{géneros}} \TipoVariable{$\alpha$}\\
-	\parbox[t]{1.7cm}{\textbf{función}}\parbox[t]{\textwidth-2\parindent-1.7cm}{
-		\InterfazFuncion{Copiar}{\In{s}{$\alpha$}}{$\alpha$}
-		{$res \igobs s$}
-		[$\Theta(copy(s))$]
-		[función de copia de $\alpha$'s.]
-	}
+	\textbf{se explica con}: \tadNombre{Cola de prioridad($\alpha$)}, \tadNombre{Iterador Unidireccional($\alpha$)}.
 
 	\textbf{géneros}: \TipoVariable{colaPrior, itColaPrior}.
 
@@ -20,11 +15,11 @@
 	[$O(1)$]
 	[creación de una cola de prioridad vacía.]
 
-	\InterfazFuncion{Encolar}{\Inout{c}{colaPrior}, \In{e}{$\alpha$}}{nat}
+	\InterfazFuncion{Encolar}{\Inout{c}{colaPrior}, \In{e}{$\alpha$}}{}
 	[$c \igobs c_0$]
 	{$res \igobs$ encolar($e, c_0$)}
-	[$O(copy(e) + )$]
-	[encola una copia de e]
+	[$O(log(\#C) + copy(e))$]
+	[encola una copia de e en la posición que le corresponde (log($\#C$)) y reacomoda el resto del arbol (log($\#C$))]
 
 	\InterfazFuncion{Vacía?}{\In{c}{colaPrior}}{bool}
 	{$res \igobs$ vacía?($c$)}
@@ -34,20 +29,20 @@
 	\InterfazFuncion{Próximo}{\In{c}{colaPrior}}{$\alpha$}
 	[$\not$ vacía(c)]
 	{res $\igobs$ próximo?($c$)}
-	[$O(copy(res))$]
-	[devuelve el elemento mas chico]
+	[$O(1)$]
+	[devuelve el elemento mas chico de la cola]
 
 	\InterfazFuncion{Desencolar}{\Inout{c}{colaPrior}}{}
 	[$\not$ vacía(c) $\land$ $c \igobs c_0$]
 	{$res \igobs$ desencolar($c_0$)}
-	[$O()$]
-	[elimina el elemento mas chico de la cola]
+	[$O(log(\#C))$]
+	[elimina el elemento mas chico de la cola en O(1), pero buscar el nuevo más chico es O(log($\#C$))]
 
 	\InterfazFuncion{Borrar}{\Inout{c}{colaPrior}, \In{e}{$\alpha$}}{colaPrior}
 	[$c \igobs c_0$]
 	{$res \igobs$ borrar($c_0$, e)}
-	[$O()$]
-	[elimina el elemento e de la cola]
+	[$O(log(\#C))$]
+	[elimina el elemento e de la cola en log($\#C$) y reacomoda el arbol (log($\#C$))]
 
   \TituloDis{Especificación de las operaciones auxiliares utilizadas en la interfaz}
 
@@ -69,3 +64,133 @@
     FI}
   \end{tad}
 \end{Interfaz}
+
+\begin{Representacion}
+	\TituloDis{Representación de colaPrior}
+
+	\begin{Estructura}{colaPrior}[eCola]
+		\begin{Tupla}[eCola]
+			\tupItem{conjElem}{conjOrd($\alpha$)}
+			\tupItem{menor}{itConjOrd($\alpha$)}
+		\end{Tupla}
+	\end{Estructura}
+
+	\TituloDis{Invariante de Representación de ColaPrior($\alpha$)}
+	
+	\begin{enumerate}
+
+		\item El menor es efectivamente el menor de conjElem
+
+	\end{enumerate}
+
+	\Rep[eCola][e]{menor(CrearIt(e.conjElem), Actual(e.menor))}
+
+	\TituloDis{Operaciones auxiliares}
+
+	\tadOperacion{menor}{itConjOrd($\alpha$), $\alpha$}{bool}{}
+
+ 	~
+
+	\tadAxioma{menor(itConj, elemento)}{
+		HaySiguiente?(itConj) $\impluego$ ((Actual(itConj) $>$ elemento $\lor$ Actual(itConj) = elemento) $\land$ menor(Avanzar(itConj), elemento))
+	}
+
+	~
+
+	\TituloDis{Función de Abstracción}
+
+	\Abs[eCola]{colaPrior}[e]{d}
+	{a}
+	%%TODO
+
+	\TituloDis{Representación del iterador}
+
+	\begin{Estructura}{itConjOrd}[itJugs]
+		\begin{Tupla}[itJugs]
+			\tupItem{conjunto}{puntero(conjOrd)}
+			\tupItem{pila}{pila(puntero(Nodo))}
+		\end{Tupla}
+	\end{Estructura}
+
+	\TituloDis{Invariante de Representación del iterador}
+
+	\begin{enumerate}
+
+		\item no hay nada hecho del iterador
+
+	\end{enumerate}
+
+	\Rep[itJugs][it]{hay iterador?}
+
+	\TituloDis{Función de Abstracción del iterador}
+
+	\Abs[eConj]{conjOrd}[e]{d}
+	{($\forall a$: $\alpha$) a $\in$ d = definido?(a, e.raiz)}
+
+\end{Representacion}
+
+\begin{Algoritmos}
+	\TituloDis{Algoritmos de ColaPrioridad($\alpha$)}
+
+	\begin{algorithm}[H]
+		\NoCaptionOfAlgo
+		\caption{\algoritmo{iVacia}{}{eCola}}
+		res.conjElem $\leftarrow$ Vacio()\OdeLinea{1}
+	\end{algorithm}
+
+	\complejidad: $O(1)$
+
+	\justifcomp: solo se inicializa el conjunto vacío
+
+	~
+
+	\begin{algorithm}[H]
+		\NoCaptionOfAlgo
+		\caption{\algoritmo{iEncolar}{\Inout{c}{eCola}, \In{e}{$\alpha$}}{}}
+		c.conjElem $\leftarrow$ Agregar(c.conjElem, e)\OdeLinea{O(log($\#C$))}
+		\If{e $<$ c.menor}{
+				%TODO cambiar el iterador menor al nuevo elemento
+			}
+	\end{algorithm}
+
+	\complejidad: $O(log(\#C))$
+
+	\justifcomp: hay que agregar el elemento al conjunto, y por invariante de AVL esto nos cuenta O(log($\#C$)). En caso de que sea el menor, hay que encontrar el elemento y cambiar el iterador en O(log($\#C$))
+
+	~
+
+	\begin{algorithm}[H]
+		\NoCaptionOfAlgo
+		\caption{\algoritmo{iVacia?}{\In{c}{eCola}}{bool}}
+		res $\leftarrow$ Vacio?(c.conjElem)\OdeLinea{O(1)} %TODO al conjOrd le estaría faltando esta funcion
+	\end{algorithm}
+
+	\complejidad: $O(1)$
+
+	\justifcomp: por la manera en la que se representa, si el conjunto de elementos esta vacío, la cola también
+
+	~
+
+	\begin{algorithm}[H]
+		\NoCaptionOfAlgo
+		\caption{\algoritmo{iDesencolar}{\Inout{c}{eCola}}{}}
+		res.raiz $\leftarrow$ NULL\OdeLinea{1}
+	\end{algorithm}
+
+	\complejidad: $O(1)$
+
+	\justifcomp: solo se inicializan los punteros como nulos.
+
+	~
+
+	\begin{algorithm}[H]
+		\NoCaptionOfAlgo
+		\caption{\algoritmo{iBorrar}{\Inout{c}{eCola}, \In{e}{$\alpha$}}{}}
+		res.raiz $\leftarrow$ NULL\OdeLinea{1}
+	\end{algorithm}
+
+	\complejidad: $O(1)$
+
+	\justifcomp: solo se inicializan los punteros como nulos.
+
+\end{Algoritmos}
